# code-provenance

./: .gitignore  Explain.txt  README.md  check_code_provenance  check_image  check_image.py  pyproject.toml  run.sh
.github/workflows/: publish.yml
code_provenance/: __init__.py  cli.py  compose_parser.py  github.py  models.py  output.py  registry.py  resolver.py
docs/superpowers/plans/: 2026-04-04-code-provenance.md  2026-04-05-node-package.md
docs/superpowers/specs/: 2026-04-04-code-provenance-design.md
node/: README.md  package-lock.json  package.json  run.sh
node/src/: cli.ts  composeParser.test.ts  composeParser.ts  github.ts  index.ts  output.ts  registry.ts  resolver.ts  types.ts
python/: README.md  pyproject.toml  run.sh
python/code_provenance/: cli.py  compose_parser.py  github.py  models.py  output.py  registry.py  resolver.py
python/tests/: test_compose_parser.py  test_github.py  test_models.py  test_output.py  test_registry.py  test_resolver.py
python/tests/fixtures/: docker-compose.yml
test-data/: cyberchef.yaml  docker-compose.yml  siyuan.yaml  test_images.txt
tests/: test_cli.py  test_compose_parser.py  test_github.py  test_integration.py  test_models.py  test_registry.py  test_resolver.py
tests/fixtures/: docker-compose.yml
