[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-provenance"
version = "0.1.4"
description = "Resolve Docker images to their source code commits on GitHub"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "SCRT Labs"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]

dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/scrtlabs/code-provenance"
Repository = "https://github.com/scrtlabs/code-provenance"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
code-provenance = "code_provenance.cli:main"

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit real external APIs (deselect with '-m not integration')",
]
